<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent">

<ImageView
    android:id="@+id/iv_logo"
    android:src="@drawable/water_my_plants_logo"
    android:layout_width="200dp"
    android:layout_height="200dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"/>

<TextView
    android:id="@+id/tv_username"
    android:text="@string/username"
    style="@style/tv_login_register"
    app:layout_constraintTop_toBottomOf="@id/iv_logo"
    app:layout_constraintLeft_toLeftOf="parent"/>

<EditText
    android:id="@+id/et_username"
    style="@style/et_box"
    android:inputType="text"
    android:maxLines="1"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/tv_username"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"/>

<TextView
    android:id="@+id/tv_password"
    android:text="@string/password"
    style="@style/tv_login_register"
    app:layout_constraintTop_toBottomOf="@id/et_username"
    app:layout_constraintLeft_toLeftOf="parent"/>

<EditText
    android:id="@+id/et_password"
    style="@style/et_box"
    android:inputType="textPassword"
    android:maxLines="1"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/tv_password"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"/>

<Button
    android:id="@+id/btn_show_hide"
    android:text="@string/show"
    android:background="@android:color/transparent"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_marginEnd="48dp"
    android:paddingStart="20dp"
    android:paddingBottom="12dp"
    style="?android:attr/borderlessButtonStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/tv_password"/>

<Button
    android:id="@+id/btn_login"
    android:text="@string/log_in"
    style="@style/button"
    android:layout_marginBottom="16dp"
    app:layout_constraintBottom_toTopOf="@id/btn_register"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"/>

<Button
    android:id="@+id/btn_register"
    android:text="@string/register"
    style="@style/button"
    android:layout_marginBottom="16dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>