<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_register_icon"
        android:src="@drawable/water_my_plants_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_username"
        android:text="@string/username"
        style="@style/tv_login_register"
        app:layout_constraintTop_toBottomOf="@id/iv_register_icon"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/et_username"
        style="@style/et_box"
        android:maxLines="1"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_phone_number"
        android:text="@string/phone_number"
        style="@style/tv_login_register"
        app:layout_constraintTop_toBottomOf="@id/et_username"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/et_phone_number"
        style="@style/et_box"
        android:maxLines="1"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@id/tv_phone_number"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_register_password"
        android:text="@string/password"
        style="@style/tv_login_register"
        app:layout_constraintTop_toBottomOf="@id/et_phone_number"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/et_register_password"
        style="@style/et_box"
        android:maxLines="1"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/tv_register_password"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_register_confirm_password"
        android:text="@string/confirm_password"
        style="@style/tv_login_register"
        app:layout_constraintTop_toBottomOf="@id/et_register_password"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/et_register_confirm_password"
        style="@style/et_box"
        android:maxLines="1"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/tv_register_confirm_password"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/btn_submit"
        android:text="@string/submit"
        style="@style/button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_register_confirm_password"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>